Add breaking changes section for ingestion framework upgrade in v1.11.10 release notes

--- a/content/product-updates/v1.11.10.md
+++ b/content/product-updates/v1.11.10.md
@@ -4,6 +4,27 @@ version: v1.11.10
 date: Released on 18th February 2026.
 ---
 
+## Breaking Changes
+
+### Ingestion Framework Upgrade Required
+
+Schema changes introduced in earlier minor releases require the ingestion framework to be upgraded when moving to 1.11.10.
+
+#### Changes Introduced
+
+- **1.11.5:** Added `queryStatementSource` field to Postgres connection
+- **1.11.5:** Added `queryParserConfig` field to Dashboard service
+- **1.11.9:** Added `statusLookbackDays` field to Pipeline service
+
+If the ingestion framework version is older and does not support these fields, you may encounter:
+- ValidationError during pipeline deployment
+- Airflow DAG build failures
+- Configuration parsing errors
+
+#### Required Action
+
+When upgrading to 1.11.10, you must also upgrade your ingestion framework to 1.11.10. Running mismatched versions may result in schema validation failures and pipeline deployment issues.
+
 ## Changelog
 
 ### Improvements
